# pep-spec

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  EVOLUTION.md  Makefile  README.md  SECURITY.md  pricing.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.hypothesis/constants/: 376ffe244ccd4a5d  39905766200e1a6c  7133304c978a2721  9f402f0b49247428  ad076ce0b2f2b324  afbf80a96cbf68e9  b231619225f8fcf7  bf3765a154e71ffb  cf230c99ceda4426  d2627d939f677dda  da39a3ee5e6b4b0d  ded06382d716e8be
.hypothesis/examples/04e6b3400353b141/: e57d3ffa3b00a726
.hypothesis/examples/e57d3ffa3b00a726/: 0532848d845d7082  0599239b0ea0a6b6  27b2240ffae5fc40  28bfc5f3903fa71c  2bd66310426a4d47  2ff692623e094b73  32e099357c6d85b4  37e1906f048cfec9  43fd89d29207c7d5  46f17d5c86a76675  52cf2c30d7deff5b  (+14 more)
conformance/: conftest.py  helpers.py  test_agent.py  test_edge_cases.py  test_engine.py  test_event_log.py  test_integration.py  test_judge.py  test_organism.py  test_performance.py  test_privacy.py  test_property.py  test_security.py  test_sharing.py  test_validation.py
examples/: create_organism.py  evolution_pipeline.py  schema_validation.py
schemas/: agent.schema.json  engine.schema.json  event-log.schema.json  judge.schema.json  organism.schema.json  privacy.schema.json  sharing.schema.json
specs/: PEP-001-organism.md  PEP-002-judge.md  PEP-003-engine.md  PEP-004-event-log.md  PEP-005-sharing.md  PEP-006-privacy.md  PEP-007-agent.md
stubs/: __init__.py  agent.py  engine.py  event_log.py  judge.py  organism.py  privacy.py  sharing.py  validation.py
types/: index.d.ts
