[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "pep-spec"
version = "0.1.0"
description = "Protocol for Evolutionary Programs — specification, schemas, stubs, and conformance tests"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["conformance"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = true
