[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "pep-spec"
version = "0.1.0"
description = "Protocol for Evolutionary Programs — specification, schemas, stubs, and conformance tests"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "TechKnowMad Labs", email = "admin@techknowmad.ai" }]
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["conformance"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"conformance/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
